--- a/index.html
+++ b/index.html
@@ -89,6 +89,46 @@
                 </div>
             </div>
         </section>
+
+        <section id="literasi-digital" class="py-16 bg-white">
+            <div class="container mx-auto px-4">
+                <h2 class="text-3xl font-bold mb-8 text-center">4 Pilar Literasi Digital: Fondasi dalam Era Digital</h2>
+                <div class="grid md:grid-cols-3 gap-8">
+                    <div class="bg-gray-100 p-6 rounded-lg shadow-md">
+                        <h3 class="text-xl font-semibold mb-4">1. Kecakapan Digital (Digital Skills)</h3>
+                        <p>Kecakapan digital adalah kemampuan menggunakan teknologi dan perangkat digital dengan efisien. Pilar ini mencakup:</p>
+                        <p>• Kemampuan mengoperasikan perangkat seperti komputer, smartphone, dan aplikasi.</p>
+                        <p>• Pemahaman dasar tentang perangkat lunak (software) dan perangkat keras (hardware).</p>
+                        <p>• Kemampuan untuk memecahkan masalah teknis dasar yang mungkin muncul saat menggunakan teknologi.</p>
+                        <p>Menguasai kecakapan digital memungkinkan seseorang untuk beradaptasi dengan cepat terhadap perubahan teknologi yang terus berkembang.</p>
+                    </div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow-md">
+                        <h3 class="text-xl font-semibold mb-4">2. Etika Digital (Digital Ethics)</h3>
+                        <p>Etika digital adalah pedoman moral yang mengatur perilaku individu di dunia maya. Pilar ini melibatkan:</p>
+                        <p>• Kesadaran akan hak dan privasi orang lain di internet.</p>
+                        <p>• Menghindari perilaku seperti cyberbullying, penyebaran hoaks, dan plagiarisme.</p>
+                        <p>• Menggunakan teknologi secara bertanggung jawab, seperti menghormati hak cipta dan hak kekayaan intelektual.</p>
+                        <p>Dengan etika digital, kita dapat menciptakan lingkungan digital yang aman, nyaman, dan inklusif untuk semua pengguna.</p>
+                    </div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow-md">
+                        <h3 class="text-xl font-semibold mb-4">Keamanan Digital (Digital Safety)</h3>
+                        <p>Keamanan digital berfokus pada perlindungan data pribadi dan informasi penting dari ancaman di dunia maya. Hal ini mencakup:</p>
+                        <p>• Menggunakan kata sandi yang kuat dan berbeda untuk setiap akun.</p>
+                        <p>• Mengenali ancaman seperti phishing, malware, dan penipuan daring.</p>
+                        <p>• Mengelola data pribadi dengan bijak, seperti tidak membagikan informasi sensitif di media sosial.</p>
+                        <p>Memahami keamanan digital membantu individu menjaga diri mereka dari risiko yang dapat merugikan secara finansial maupun emosional.</p>
+                    </div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow-md">
+                        <h3 class="text-xl font-semibold mb-4">Budaya Digital (Digital Culture)</h3>
+                        <p>Budaya digital adalah pemahaman tentang bagaimana teknologi memengaruhi komunikasi, kolaborasi, dan perilaku sosial. Pilar ini mencakup:</p>
+                        <p>• Menggunakan teknologi untuk kolaborasi yang positif, seperti berbagi informasi bermanfaat dan membangun komunitas daring.</p>
+                        <p>• Mengembangkan sikap kritis terhadap informasi yang ditemukan di internet.</p>
+                        <p>• Menghargai keragaman budaya dalam interaksi digital.</p>
+                        <p>Dengan budaya digital yang kuat, masyarakat dapat memanfaatkan teknologi untuk membangun hubungan yang lebih baik dan produktif.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer class="bg-indo-red text-indo-white py-8">
